# SMA-para-Analisis-de-Sentimiento

./: LICENSE  README.md
data/: commentsNew.csv
sentiment_api/: pyproject.toml
src/sma_agents/: AcquisitionAgent.java  SentimentAgent.java  VisualizationAgent.java
src/youtube/: YoutubeCommentsAPI.java  YoutubeResponse.java
