[project]
name = "sentiment-api"
version = "0.1.0"
description = ""
authors = [
    {name = "SergioZSZ",email = "s.zaballosh@gmail.com"}
]
license = {text = "Apache-2.0"}
requires-python = ">=3.11, <=3.13"
dependencies = [
    "uvicorn[standard] (>=0.47.0,<0.48.0)",
    "fastapi (>=0.136.1,<0.137.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "torch (>=2.12.0,<3.0.0)",
    "pysentimiento (>=0.7.3,<0.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
